# ABMValidation

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  app.py  pyproject.toml  requirements.txt
data/: Data2 (Good).csv  Data5_B1_uniform_data_value.csv  Data5_B3_uniform_data_and_repair_value.csv  Data5_typical.csv  Data_Best.csv  Data_ConfigA_20Server.csv  Data_ConfigB_5Server_SMB.csv  Data_Typical.csv  Data_Worst.csv  data.schema.md
docs/: METHODS_synthetic_ground_truth.md  PAPER1_WORKING_DOC.md
docs/preregistrations/: synthetic_ground_truth_2026-05-18.md
scripts/: synthetic_ground_truth_runner.py  telegram_run_monitor.py
src/notebook_refactor/: agents.py  config.py  environment.py  main.py  simulation.py  sweep.py
